[tool.poetry]
name = "old-tapes"
version = "0.1.0"
description = ""
authors = ["Mira <szewczyk.mira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
ipython = "^7.12.0"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
